# flattype

./: .bunder.yml  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
cmake-scripts/: FindFlattype.cmake  accelerator.cmake  flatbuffers.cmake
flattype/: Builder.h  CMakeLists.txt  CommonIDLs.h  Compare.cpp  Compare.h  Copy.cpp  Copy.h  Encoding.h  Equal.h  Portability.h  Serialize.h  Stringize.h  Tuple.cpp  Tuple.h  TupleBuilder.cpp  TupleBuilder.h  Type.cpp  Type.h  Util.h  Wrapper.h  flatjson.cpp.bk  flatjson.h.bk  flattype-config.h  flattype-config.h.in  json-inl.h  json.cpp  json.h
flattype/bucket/: Bucket.cpp  Bucket.h  BucketBuilder.cpp  BucketBuilder.h  CMakeLists.txt  Index.cpp  Index.h  IndexBuilder.cpp  IndexBuilder.h
flattype/hash/: CMakeLists.txt  HashMap.h  HashMapBuilder.cpp  HashMapBuilder.h  Slot.h
flattype/idl/: CMakeLists.txt  base.fbs  base_generated.h  bucket.fbs  hash.fbs  index.fbs  json.fbs  json_generated.h  matrix.fbs  matrix_generated.h  message.fbs  message_generated.h  object.fbs  object_generated.h  query.fbs  table.fbs  table_generated.h
flattype/index/: CMakeLists.txt  Index.cpp  Index.h  IndexBuilder.cpp  IndexBuilder.h
flattype/matrix/: CMakeLists.txt  ColumnarMatrix.cpp  ColumnarMatrix.h  ColumnarMatrixBuilder.cpp  ColumnarMatrixBuilder.h  Compare.cpp  Compare.h  Copy.cpp  Copy.h  Encoding.h  Equal.cpp  Equal.h  Matrix.cpp  Matrix.h  MatrixBuilder.cpp  MatrixBuilder.h  Serialize.h  Stringize.h  Tuple.cpp  Tuple.h  TupleBuilder.cpp  TupleBuilder.h  Util.h
flattype/matrix/test/: CMakeLists.txt  SerializeTest.cpp
flattype/message/: CMakeLists.txt  Message.cpp  Message.h  MessageBuilder.cpp  MessageBuilder.h
flattype/object/: CMakeLists.txt  Compare.cpp  Compare.h  Copy.cpp  Copy.h  DynamicBuilder.cpp  DynamicBuilder.h  Encoding.h  Equal.cpp  Equal.h  Serialize.cpp  Serialize.h  Stringize.h  Type.cpp  Type.h  dynamic-inl.h  dynamic.cpp  dynamic.h
flattype/object/test/: CMakeLists.txt  DynamicTest.cpp
flattype/query/: CMakeLists.txt  Operation.cpp  Operation.h  OperationBuilder.cpp  OperationBuilder.h  Query.cpp  Query.h  QueryBuilder.cpp  QueryBuilder.h
flattype/table/: CMakeLists.txt  Index.cpp  Index.h  IndexBuilder.cpp  IndexBuilder.h  Table.cpp  Table.h  TableBuilder.cpp  TableBuilder.h
flattype/test/: CMakeLists.txt  SerializeTest.cpp  StringizeTest.cpp  TypeTest.cpp  ValueTest.cpp
